# freza

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: desktop-release.yml
desktop/: index.html  package-lock.json  package.json  vite.config.desktop.js
desktop/src/: ConnectionPicker.vue  DesktopApp.vue  main.desktop.js  style.desktop.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/lib/: connections.js
src/freza/: __main__.py  agents.py  channels.py  cli.py  config.py  daemon.py  llm.py  memory.py  registry.py
src/freza/webui/: index.html  server.py
src/freza/webui/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
src/freza/webui/frontend/src/: App.vue  style.css
src/freza/webui/frontend/src/components/chat/: ChatMessage.vue  ChatPanel.vue  HistoryPanel.vue  ToolEvent.vue
src/freza/webui/frontend/src/components/diagnostics/: DiagnosticsPanel.vue  LogDetailModal.vue
src/freza/webui/frontend/src/components/layout/: SidebarNav.vue
src/freza/webui/frontend/src/lib/: api.js  format.js
